# ferror

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  dir_d44c64559bbebec7f509842c48db8b23.html  docs.md  ferrorConfig.cmake.in  ferror_8f90_source.html  ferror_8h.js  ferror_8h__incl.dot  fpm.toml  globals_type.html  menudata.js  meson.build  namespaceferror.js  navtreeindex0.js  search.html  structerror__handler.html  structferror_1_1errors.js
.github/workflows/: cmake.yml  doc-deployment.yml  doxygen-gh-pages.yml  fpm.yml
C/html/: functions_vars.html  globals_type.html
C/html/search/: functions_3.js
cmake/: helper.cmake
configure/: CMakeLists.txt  template.cmake
doc/: C Doxyfile  Doxyfile  index.html  search.html
doc/C API/html/: annotated.html  annotated_dup.js  classes.html  functions.html  globals.html  globals_func.html  structerror__handler.html
doc/C API/html/search/: all_3.js  all_5.js  functions_1.js  functions_5.js  typedefs_0.js
doc/C/html/: dir_d44c64559bbebec7f509842c48db8b23.html  ferror_8h.html  ferror_8h_source.html  files.html  index.html  navtreedata.js  navtreeindex0.js
doc/C/html/search/: all_1.js  all_2.js  all_9.js  classes_0.js  searchdata.js
doc/html/: annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  ferror_8f90_source.html  ferror__c__binding_8f90_source.html  ferror__c__implementation_8f90_source.html  ferror__implementation_8f90_source.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  interfaceferror_1_1error__callback-members.html  interfaceferror_1_1error__callback.html  interfaceferror__c__binding_1_1c__error__callback-members.html  interfaceferror__c__binding_1_1c__error__callback.html  menudata.js  namespaceferror.html  namespaceferror__c__binding.html  namespaceferror__c__binding.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  structferror_1_1errors-members.html  structferror_1_1errors.html  structferror__c__binding_1_1callback__manager.html  structferror__c__binding_1_1error__handler-members.html  structferror__c__binding_1_1error__handler.html  structferror__c__binding_1_1errorhandler.html  typeferror_1_1errors-members.html  typeferror__c__binding_1_1callback__manager-members.html  typeferror__c__binding_1_1errorhandler-members.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_b.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_6.js  functions_7.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js
doc/interface/: error_callback.html
doc/lists/: modules.html  procedures.html  types.html
doc/sourcefile/: ferror.f90.html
doc/src/: ferror.f90
doc/tipuesearch/: tipuesearch_content.js
doc/type/: errors.html
docs/: Doxyfile
docs/html/: annotated_dup.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.js  ferror_8h.html  ferror_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  namespaces.html  navtreedata.js  structerror__handler-members.html  structerror__handler.js  structferror_1_1errors-members.html  structferror_1_1errors.html
docs/html/search/: all_1.js  all_4.js  functions_0.js  functions_4.js  functions_5.js  searchdata.js  variables_0.js
examples/: CMakeLists.txt  ferror_example_1.f90  ferror_example_1c.c  ferror_example_2.f90  ferror_example_2c.c
include/: ferror.h
install/: CMakeLists.txt  ferrorConfig.cmake.in  template.pc
interface/: error_callback.html
lists/: modules.html  procedures.html
module/: ferror.html
search/: all_2.js  all_3.js  all_7.js  all_9.js  classes_0.js  files_0.js  pages_0.js
sourcefile/: ferror.f90.html
src/: CMakeLists.txt  ferror.f90  ferror_c_binding.f90  ferror_c_implementation.f90  ferror_implementation.f90
test/: CMakeLists.txt  ferror_test.f90  ferror_test_c.c
